--- a/src/css/style.css
+++ b/src/css/style.css
@@ -469,6 +469,7 @@ main {
   border-radius: 20px;
   box-shadow: 2px 2px 5px 1px #e2e2e2;
   margin: 0 0 20px 0;
+  position: relative;
 }
 @media screen and (min-width: 1255px) {
   .cards:nth-child(1) {
@@ -521,27 +522,29 @@ main {
   width: 100%;
   height: 70%;
   object-fit: cover;
-  object-position: 0px -40px;
   border-radius: 15px 15px 0 0;
 }
+.cards:nth-child(1) .cards__img {
+  object-position: 0px -60px;
+}
 @media screen and (min-width: 450px) {
-  .cards__img {
+  .cards:nth-child(1) .cards__img {
     object-position: 0px -100px;
   }
 }
 @media screen and (min-width: 575px) {
-  .cards__img {
+  .cards:nth-child(1) .cards__img {
     object-position: 0px -130px;
   }
 }
 @media screen and (min-width: 700px) {
-  .cards__img {
+  .cards:nth-child(1) .cards__img {
     height: 78%;
     object-position: 0px -80px;
   }
 }
 @media screen and (min-width: 900px) {
-  .cards__img {
+  .cards:nth-child(1) .cards__img {
     height: 78%;
     object-position: 0px -180px;
   }
@@ -553,7 +556,7 @@ main {
   }
 }
 .cards:nth-child(2) .cards__img {
-  object-position: 0px -140px;
+  object-position: 0px -150px;
 }
 @media screen and (min-width: 450px) {
   .cards:nth-child(2) .cards__img {
@@ -580,6 +583,31 @@ main {
     object-position: 0px -400px;
   }
 }
+.cards:nth-child(3) .cards__img {
+  object-position: 0px -50px;
+}
+@media screen and (min-width: 450px) {
+  .cards:nth-child(3) .cards__img {
+    object-position: 0px -100px;
+  }
+}
+@media screen and (min-width: 575px) {
+  .cards:nth-child(3) .cards__img {
+    object-position: 0px -130px;
+  }
+}
+@media screen and (min-width: 700px) {
+  .cards:nth-child(3) .cards__img {
+    height: 78%;
+    object-position: 0px -80px;
+  }
+}
+@media screen and (min-width: 900px) {
+  .cards:nth-child(3) .cards__img {
+    height: 78%;
+    object-position: 0px -180px;
+  }
+}
 @media screen and (min-width: 1255px) {
   .cards:nth-child(3) .cards__img {
     height: 78%;
@@ -587,7 +615,7 @@ main {
   }
 }
 .cards:nth-child(4) .cards__img {
-  object-position: 0px -45px;
+  object-position: 0px -50px;
 }
 @media screen and (min-width: 450px) {
   .cards:nth-child(4) .cards__img {
@@ -624,27 +652,10 @@ main {
   border-radius: 3px;
   padding: 5px 10px 5px 10px;
   position: absolute;
-  margin-top: 10px;
-  top: 1;
-  right: 30px;
+  top: 10px;
+  right: 10px;
   font-size: 15px;
   font-weight: 520;
-}
-@media screen and (min-width: 575px) {
-  .cards__nouveau {
-    right: 50px;
-    font-size: 17px;
-  }
-}
-@media screen and (min-width: 700px) {
-  .cards__nouveau {
-    right: 60px;
-  }
-}
-@media screen and (min-width: 1255px) {
-  .cards__nouveau {
-    right: 340px;
-  }
 }
 .cards__details {
   display: flex;
@@ -689,11 +700,21 @@ header {
   display: flex;
   justify-content: center;
   height: 55px;
+  max-width: 1440px;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.279);
+  position: fixed;
+  background-color: white;
+  width: 100%;
+  z-index: 999;
 }
 @media screen and (min-width: 575px) {
   header {
     height: 65px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  header {
+    position: static;
   }
 }
 header a {
@@ -731,23 +752,51 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 45px;
+  padding-top: 65px;
+  padding-bottom: 15px;
   width: 100%;
   box-shadow: 0px 3px 5px 0px #CCCCCC inset;
 }
+@media screen and (min-width: 575px) {
+  .search-bar {
+    padding-top: 75px;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .search-bar {
+    padding-top: 12px;
+  }
+}
 .search-bar__icons {
+  position: relative;
+}
+.search-bar__icons i {
   font-size: 15px;
+  position: absolute;
+  right: 4px;
+  top: -8px;
 }
 .search-bar__input {
-  background: none;
+  background: #EAEAEA;
   border: none;
   text-align: center;
-  width: 40%;
+  width: 130px;
+  margin-top: 5px;
+}
+@media screen and (min-width: 575px) {
+  .search-bar__input {
+    width: 150px;
+  }
 }
 .search-bar__input::placeholder {
   color: black;
   font-weight: 400;
   font-size: 16px;
+}
+@media screen and (min-width: 575px) {
+  .search-bar__input::placeholder {
+    font-size: 19px;
+  }
 }
 
 /*************
